Machine-Learning-Foundation-Nanodegree/Test-a-Perceptual-Phenomenon/.nbgrader.log
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/Udacity-Courses/Machine-Learning-Foundation-Nanodegree/Test-a-Perceptual-Phenomenon
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=03f5fac5131d4e5cceab6789e066a366ab2940b0c0f125b9
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=03f5fac5131d4e5cceab6789e066a366ab2940b0c0f125b9
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | INFO] Creating new notebook in 
[NotebookApp | INFO] Kernel started: 9fea9009-f961-425c-b629-07e3f3d6d490
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 9fea9009-f961-425c-b629-07e3f3d6d490
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 1 kernel
[NotebookApp | INFO] Kernel shutdown: 9fea9009-f961-425c-b629-07e3f3d6d490
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/Udacity-Courses/Machine-Learning-Foundation-Nanodegree/Test-a-Perceptual-Phenomenon
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=ef4bdd9db107b2c6c68d3aa883c579e1f862f55cdb7f3159
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=ef4bdd9db107b2c6c68d3aa883c579e1f862f55cdb7f3159
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | INFO] Kernel started: 182b2dfd-3ff4-412c-b574-58887d6a7ce9
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 182b2dfd-3ff4-412c-b574-58887d6a7ce9
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Saving file at /Stroop Task.ipynb
[NotebookApp | INFO] Support files will be in 
[NotebookApp | INFO] Making directory /home/hp/workfolder/Udacity-Courses/Machine-Learning-Foundation-Nanodegree/Test-a-Perceptual-Phenomenon
[NotebookApp | INFO] Making directory /home/hp/workfolder/Udacity-Courses/Machine-Learning-Foundation-Nanodegree/Test-a-Perceptual-Phenomenon
[NotebookApp | INFO] Writing 31054 bytes to /home/hp/workfolder/Udacity-Courses/Machine-Learning-Foundation-Nanodegree/Test-a-Perceptual-Phenomenon/notebook.tex
[NotebookApp | INFO] Building PDF
[NotebookApp | INFO] Running xelatex 3 times: ['xelatex', '/home/hp/workfolder/Udacity-Courses/Machine-Learning-Foundation-Nanodegree/Test-a-Perceptual-Phenomenon/notebook.tex']
[NotebookApp | INFO] Running bibtex 1 time: ['bibtex', '/home/hp/workfolder/Udacity-Courses/Machine-Learning-Foundation-Nanodegree/Test-a-Perceptual-Phenomenon/notebook']
[NotebookApp | WARNING] bibtex had problems, most likely because there were no citations
[NotebookApp | INFO] PDF successfully created
[NotebookApp | INFO] Starting buffering for 182b2dfd-3ff4-412c-b574-58887d6a7ce9:88e483104514453791087096fc8eb4f5
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 1 kernel
[NotebookApp | INFO] Kernel shutdown: 182b2dfd-3ff4-412c-b574-58887d6a7ce9
